# Projekt-Betta

./: .env.example  .gitattributes  .gitignore  AUTHORIZED_USE_POLICY.md  CONTRIBUTING.md  DCO  LICENSE  MANIFEST.in  NOTICE  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  launcher.py  pyproject.toml  pyrightconfig.json  requirements.txt  version.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: DISCLAIMER-checkpoint.md
Ports/: 1000.txt
artifacts/: ci_smoke_model.json  host_discovery_model.json  scanner_aggressive.json  scanner_model.json  scanner_sneaky.json  service_catalog.json  service_model.json  service_model_generated_20260402.json  small_lab_model.json  snn_model_real.json
audit/2026-05-05-full-program-audit/: REPORT.md
configs/: train.roundtrip.yaml
data/: ci_smoke_dataset.csv  host_discovery_synthetic.csv  snn_training_batch.csv  synthetic_dataset.csv  synthetic_small_lab.csv
data/benchmarks/: domain_summary.json  raw_fixed_vs_connect_old.json
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  Engineering_Draft.md  HOST_DISCOVERY_GUIDE.md  IMPLEMENTATION_IDEAS_EN.md  QUICKSTART.md  SCANNING_GUIDE.md  SCAN_SPEED_THEORY_EN.md  TRAINING_GUIDE.md
rust-runtime/: Cargo.toml  rust-toolchain.toml
rust-runtime/.cargo/: config.toml
rust-runtime/src/: lib.rs  main.rs  scanner.rs  snn_core.rs
scripts/: bootstrap-autonomous.ps1  bootstrap-autonomous.sh  start-autonomous.ps1  start-autonomous.sh
tools/: artifact_schema.py  benchmark_scans.py  cve_hints.py  domain_metrics.py  experiment_registry.py  gen_real_dataset.py  generate_snn_golden_dataset.py  host_discovery.py  lab_exercise.py  lab_services.py  nmap_service_catalog.py  path_naming.py  scan_history.py  service_fingerprint.py  service_sigs.py  test_artifact_schema.py  test_benchmark_registry.py  test_decoys.py  test_golden_dataset.py  test_host_discovery.py  test_launcher_interrupt.py  test_launcher_smoke.py  test_path_naming.py  test_raw_probe_safety.py  test_scanner_enrichment.py  test_scanner_telemetry.py  test_service_catalog.py  test_service_fingerprint.py  test_service_sigs.py  test_training_pipeline.py  test_verify_scan.py  verify_scan.py
training/: __init__.py  evaluate.py  generate_synthetic_data.py  replay_directory.py  train.py
training/src/snn_cyber/: __init__.py  config.py  dataset.py  inference.py  metrics.py  model.py  schema.py
training/src/snn_host_discovery/: __init__.py  dataset.py  inference.py  schema.py
training/tools/: __init__.py  live_capture_to_csv.py  pcap_to_csv.py  scanner.py  scanner_engine.py  scanner_enrichment.py  scanner_probes.py  scanner_support.py  scanner_types.py  scanner_utils.py
