[package]
name        = "betta-morpho"
version     = "2.3.3"
edition     = "2021"
authors     = ["Vitalii Khomenko <khomenko.vitalii@pm.me>"]
license     = "Apache-2.0"
description = "Betta-Morpho - Neuromorphic Adaptive Scanner, Rust primary runtime"

# -- Core ----------------------------------------------------------------------
[dependencies]
anyhow   = "1"
clap     = { version = "4", features = ["derive"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"

# -- Betta-Morpho SNN ----------------------------------------------------------
# Fixed-point arithmetic (eliminates FPU overhead for LIF computation)
fixed    = "1"

# -- Scanner -------------------------------------------------------------------
# Async runtime for concurrent probe sender + receiver tasks
tokio    = { version = "1", features = ["full"] }
# Raw packet crafting (optional - requires Npcap on Windows, root on Linux)
# Enable with: cargo build --release --features raw-scan
pnet      = { version = "0.34", optional = true }
siphasher = { version = "1",    optional = true }
rand      = { version = "0.8",  optional = true }

# -- Serialization -------------------------------------------------------------
# Fast binary weight loading (pre-trained artifacts from Python)
bincode    = "1"
# IP network/CIDR parsing (also a pnet transitive dep)
ipnetwork  = "0.20"
# CSV for classifier replay (existing workflow)
csv      = "1"

[features]
# Enable raw SYN scanning via pnet (requires Npcap on Windows, root on Linux):
#   cargo build --release --features raw-scan
raw-scan = ["dep:pnet", "dep:siphasher", "dep:rand"]

[[bin]]
name = "betta-morpho"
path = "src/main.rs"
